fixed DigitalIdentity section alignment

--- a/my-app/src/components/DigitalIdentities/DigitalStyles.scss
+++ b/my-app/src/components/DigitalIdentities/DigitalStyles.scss
@@ -1,3 +1,10 @@
+.CardContainerWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .digitalCardContainer {
   background: linear-gradient(
     25deg,
@@ -11,7 +18,7 @@
   justify-content: start;
   text-align: left;
   align-items: start;
-  margin: 10px 20px;
+
   padding: 20px;
   width: 100%;
 }
@@ -19,8 +26,6 @@
 .cardContainer {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
 }
 
 @media only screen and (max-width: 1080px) {
